# youtube-auto-clip-translator

./: .gitignore  PLAN.md  PROGRESS.md  auto_collect_voice.py  build_speaker_database.py  clip_with_speaker.py  correct_lol_terms.py  download_drx_interviews.py  download_interviews.py  download_more_interviews.py  download_team_voice.py  extract_simple_embeddings.py  extract_teamvoice_embeddings.py  identify_speakers.py  lol_dictionary.py  process_lol_clip.py  process_lol_clip_v2.py  pyproject.toml  roster_manager.py
data/: custom_lol_terms.json  learned_corrections.json  lol_dictionary.json  speaker_database.json
data/speaker_embeddings_v2/: aiming.npy  bdd.npy  canyon.npy  career.npy  chovy.npy  clozer.npy  cuzz.npy  delight.npy  deokdam.npy  doran.npy  duro.npy  faker.npy  ghost.npy  gumayusi.npy  kanavi.npy  kellin.npy  keria.npy  kiin.npy  kingen.npy  lehends.npy  lucid.npy  oner.npy  peanut.npy  perfect.npy  peyz.npy  rich.npy  ruler.npy  showmaker.npy  siwoo.npy  smash.npy  summary.json  teddy.npy  vicla.npy  viper.npy  zeka.npy  zeus.npy
docs/: 00_design_decisions.md  01_video_fetcher.md  02_audio_processor.md  03_ai_analyzer.md  04_subtitle_generator.md  05_video_editor.md  06_gui.md  07_exporter.md  ARCHITECTURE.md  CONFIG_SCHEMA.md  CONSTRAINTS.md  ERROR_CODES.md  PREPARATION_CHECKLIST.md  REVIEW_IMPROVEMENTS.md
src/: main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  project_history.py
src/gui/: DESIGN_SYSTEM.md  __init__.py  animation.py  app.py  theme.py
src/models/: __init__.py
src/utils/: torchaudio_compat.py
(+20 files in other folders)
